compiler/weave_syntax/tests/data/syntax/IncompleteNamespace3.error
error: expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
